--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -129,7 +129,7 @@
     "    \n",
     "    :param int npoints: Number of point to generate the polygon \n",
     "    \n",
-    "    :returns shapely.grometry.Polygon: The poligon created\n",
+    "    :returns shapely.geometry.Polygon: The polygon created\n",
     "    \"\"\"\n",
     "    points_r = np.random.random((npoints, 2))\n",
     "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_r))\n",
@@ -242,10 +242,7 @@
     "        :param double min_scale_y: min y value range ( Default=.1 )\n",
     "        \n",
     "        :param double max_scale_y: max y value range ( Default=.5 )\n",
-    "        \n",
     "        \"\"\"\n",
-    "        \n",
-    "        \n",
     "        self.density = density\n",
     "        random.seed(random_state) ## initialize random state \n",
     "        avoid_intersec= kwargs.get('avoid_intersec', False)\n",
@@ -973,6 +970,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "node.populate_cluster(20)"
    ]
   },
@@ -1072,7 +1070,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.create_polygon\" class=\"doc_header\"><code>NodeCluster.create_polygon</code><a href=\"__main__.py#L145\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.create_polygon\" class=\"doc_header\"><code>NodeCluster.create_polygon</code><a href=\"__main__.py#L142\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.create_polygon</code>(**`from_points_num`**=*`20`*)\n",
        "\n",
@@ -1109,7 +1107,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.create_random_points\" class=\"doc_header\"><code>NodeCluster.create_random_points</code><a href=\"__main__.py#L183\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.create_random_points\" class=\"doc_header\"><code>NodeCluster.create_random_points</code><a href=\"__main__.py#L180\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.create_random_points</code>(**`npoints_polygon`**=*`1000`*, **`random_state`**=*`120`*)\n",
        "\n",
@@ -1141,7 +1139,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.polygon_not_intersec_children\" class=\"doc_header\"><code>NodeCluster.polygon_not_intersec_children</code><a href=\"__main__.py#L686\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.polygon_not_intersec_children\" class=\"doc_header\"><code>NodeCluster.polygon_not_intersec_children</code><a href=\"__main__.py#L683\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.polygon_not_intersec_children</code>(**\\*\\*`kwargs`**)\n",
        "\n",
@@ -1187,7 +1185,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.scale\" class=\"doc_header\"><code>NodeCluster.scale</code><a href=\"__main__.py#L217\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.scale\" class=\"doc_header\"><code>NodeCluster.scale</code><a href=\"__main__.py#L214\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.scale</code>(**`x_scale`**, **`y_scale`**, **`center_scale`**=*`'center'`*)\n",
        "\n",
@@ -1229,7 +1227,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.get_density\" class=\"doc_header\"><code>NodeCluster.get_density</code><a href=\"__main__.py#L246\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.get_density\" class=\"doc_header\"><code>NodeCluster.get_density</code><a href=\"__main__.py#L243\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.get_density</code>()\n",
        "\n",
@@ -1257,7 +1255,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.tag_low_level_noise_signal\" class=\"doc_header\"><code>NodeCluster.tag_low_level_noise_signal</code><a href=\"__main__.py#L364\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.tag_low_level_noise_signal\" class=\"doc_header\"><code>NodeCluster.tag_low_level_noise_signal</code><a href=\"__main__.py#L361\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.tag_low_level_noise_signal</code>(**`point_check`**=*`None`*)\n",
        "\n",
@@ -1291,7 +1289,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.get_center\" class=\"doc_header\"><code>NodeCluster.get_center</code><a href=\"__main__.py#L274\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.get_center\" class=\"doc_header\"><code>NodeCluster.get_center</code><a href=\"__main__.py#L271\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.get_center</code>()\n",
        "\n",
@@ -1319,7 +1317,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.get_points\" class=\"doc_header\"><code>NodeCluster.get_points</code><a href=\"__main__.py#L297\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.get_points\" class=\"doc_header\"><code>NodeCluster.get_points</code><a href=\"__main__.py#L294\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.get_points</code>(**`all_tag`**=*`False`*)\n",
        "\n",
@@ -1346,7 +1344,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.get_point_decendent\" class=\"doc_header\"><code>NodeCluster.get_point_decendent</code><a href=\"__main__.py#L316\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.get_point_decendent\" class=\"doc_header\"><code>NodeCluster.get_point_decendent</code><a href=\"__main__.py#L313\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.get_point_decendent</code>()\n",
        "\n",
@@ -1381,7 +1379,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.viewer_cluster\" class=\"doc_header\"><code>NodeCluster.viewer_cluster</code><a href=\"__main__.py#L480\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.viewer_cluster\" class=\"doc_header\"><code>NodeCluster.viewer_cluster</code><a href=\"__main__.py#L477\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.viewer_cluster</code>(**`ax`**, **\\*\\*`kwargs`**)\n",
        "\n",
@@ -1537,7 +1535,9 @@
     "        \n",
     "        :returns None:\n",
     "        \"\"\"\n",
-    "\n",
+    "        verbose = kwargs.get('verbose', False)\n",
+    "        if verbose:\n",
+    "            print(\"Entro a la funcion populate_tree\" )\n",
     "        for level_id, level in  enumerate(self.levels_nodes):\n",
     "            rand_cluster_state= np.random.randint(0, 1500, len(level)) ## Random ints for random_seed\n",
     "            if level_id ==0 :\n",
@@ -1840,7 +1840,46 @@
    "outputs": [],
    "source": [
     "#hide \n",
-    "tree = TreeClusters(3, random_seed= 123)"
+    "tree = TreeClusters(3, random_seed= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "tree.populate_tree(number_per_cluster=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root\n",
+      "Root    \n",
+      "└── Root_l_0_n_0\n",
+      "    ├── Root_l_0_n_0_l_1_n_0\n",
+      "    ├── Root_l_0_n_0_l_1_n_1\n",
+      "    │   ├── Root_l_0_n_0_l_1_n_1_l_2_n_0\n",
+      "    │   └── Root_l_0_n_0_l_1_n_1_l_2_n_1\n",
+      "    ├── Root_l_0_n_0_l_1_n_2\n",
+      "    └── Root_l_0_n_0_l_1_n_3\n",
+      "        ├── Root_l_0_n_0_l_1_n_3_l_2_n_0\n",
+      "        ├── Root_l_0_n_0_l_1_n_3_l_2_n_1\n",
+      "        └── Root_l_0_n_0_l_1_n_3_l_2_n_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "tree.print_structure()"
    ]
   },
   {
@@ -1862,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1940,13 +1979,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L243\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L245\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.get_deepth</code>()\n",
        "\n",
@@ -1966,13 +2005,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L253\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.size</code>()\n",
        "\n",
@@ -1994,18 +2033,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Points "
+    "#### Points "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.get_points_tree\" class=\"doc_header\"><code>TreeClusters.get_points_tree</code><a href=\"__main__.py#L121\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_points_tree\" class=\"doc_header\"><code>TreeClusters.get_points_tree</code><a href=\"__main__.py#L123\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
        "\n",
@@ -2038,13 +2077,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.print_structure\" class=\"doc_header\"><code>TreeClusters.print_structure</code><a href=\"__main__.py#L147\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.print_structure\" class=\"doc_header\"><code>TreeClusters.print_structure</code><a href=\"__main__.py#L149\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.print_structure</code>()\n",
        "\n",
@@ -2064,13 +2103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.visualize\" class=\"doc_header\"><code>TreeClusters.visualize</code><a href=\"__main__.py#L159\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize\" class=\"doc_header\"><code>TreeClusters.visualize</code><a href=\"__main__.py#L161\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
        "\n",
@@ -2094,13 +2133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L188\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L190\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
        "\n"
@@ -2128,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2249,7 @@
        "\n",
        ":param int npoints: Number of point to generate the polygon \n",
        "\n",
-       ":returns shapely.grometry.Polygon: The poligon created"
+       ":returns shapely.geometry.Polygon: The polygon created"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
