--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -954,8 +954,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ed8da47d-30f6-4526-a36c-310b2d09f165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "#export\n",
+    "\n",
+    "def generate_tree_clusterize_form(**kwargs ):\n",
+    "    \"\"\"\n",
+    "    Generates all the experiment all the experiment creates the data and clusterize using the algorithm available\n",
+    "    :param levels_tree: Levels for the tree\n",
+    "    :param int per_cluster: Points per clusters\n",
+    "    :param levels_cluster:  Levels to clusterize\n",
+    "    :param bool verbose:  To print some outputs \n",
+    "    :returns: a dictionary with all the  data frames and a dictionary \n",
+    "    with the similarity measurment created\n",
+    "     \"\"\"\n",
+    "    \n",
+    "    levels_tree= kwargs.get('tree_level', 4)\n",
+    "    per_cluster = kwargs.get('num_per_cluster', 200)\n",
+    "    levels_cluster = kwargs.get('levels_cluster', 4)\n",
+    "    verbose = kwargs.get('verbose', False)\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print('generating tree')\n",
+    "    \n",
+    "    \n",
+    "    random.seed(int(time.time()))\n",
+    "    random_seed = random.randint(0,1500)\n",
+    "    print('Random to use: ',random_seed )\n",
+    "    print('With',levels_tree , ' levels' )\n",
+    "    tree_original= tree_clusters(levels_tree, random_seed= random_seed)\n",
+    "    tree_original.populate_tree(number_per_cluster=per_cluster, avoid_intersec= True)\n",
+    "    tree_original_points= tree_original.get_points_tree()\n",
+    "    X_2=np.array([[p.x,p.y] for p in tree_original_points])\n",
+    "    dic_points_ori={'points':[X_2], 'parent':''}\n",
+    "    if verbose:\n",
+    "        print('tree with: ', X_2.shape )\n",
+    "    \n",
+    "    while X_2.shape[0] < 2000:\n",
+    "        \n",
+    "        print('tree with too few elements to clusterize creating new tree')\n",
+    "        random.seed(int(time.time()))\n",
+    "        random_seed = random.randint(0,1500)\n",
+    "        print('Random to use: ',random_seed )\n",
+    "        tree_original= tree_clusters(levels_tree, random_seed= random_seed)\n",
+    "        tree_original.populate_tree(number_per_cluster=per_cluster, avoid_intersec= True)\n",
+    "        tree_original_points= tree_original.get_points_tree()\n",
+    "        X_2=np.array([[p.x,p.y] for p in tree_original_points])\n",
+    "        dic_points_ori={'points':[X_2], 'parent':''}\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    if verbose:\n",
+    "        print('tree generated')\n",
+    "    \n",
+    "    \n",
+    "    if verbose:\n",
+    "        print('clusterize and creating the trees')\n",
+    "    \n",
+    "    tree_Natural_c = recursive_clustering_tree(dic_points_ori,\n",
+    "                                               levels_clustering = levels_cluster,\n",
+    "                                              algorithm = 'natural_cities'\n",
+    "                                              )\n",
+    "    tree_DBSCAN = recursive_clustering_tree(dic_points_ori,\n",
+    "                                               levels_clustering = levels_cluster,\n",
+    "                                              algorithm = 'dbscan')\n",
+    "    tree_HDBSCAN = recursive_clustering_tree(dic_points_ori,\n",
+    "                                               levels_clustering = levels_cluster,\n",
+    "                                              algorithm = 'hdbscan')\n",
+    "    tree_OPTICS= recursive_clustering_tree(dic_points_ori,\n",
+    "                                               levels_clustering = levels_cluster,\n",
+    "                                              algorithm = 'optics')\n",
+    "    tree_knee = recursive_clustering_tree(dic_points_ori,\n",
+    "                                               levels_clustering = levels_cluster,\n",
+    "                                              algorithm = 'auto_knee_average')\n",
+    "    if verbose:\n",
+    "        print('DONE clusterize and creating the trees')\n",
+    "    ######  get the points dataframe for each tree \n",
+    "    data_fram_or = tree_original.get_dataframe_recursive_node_label(func_level_nodes = levels_from_strings)\n",
+    "    df_Natural = tree_Natural_c.get_dataframe_recursive_node_label()\n",
+    "    df_DBSCAN = tree_DBSCAN.get_dataframe_recursive_node_label()\n",
+    "    df_HDBSCAN = tree_HDBSCAN.get_dataframe_recursive_node_label()\n",
+    "    df_OPTICS = tree_OPTICS.get_dataframe_recursive_node_label()\n",
+    "    df_knee = tree_knee.get_dataframe_recursive_node_label()\n",
+    "    \n",
+    "    df_Natural.name='Natural_C'\n",
+    "    df_DBSCAN.name= 'DBSCAN'\n",
+    "    df_HDBSCAN.name= 'HDBSCAN'\n",
+    "    df_OPTICS.name= 'OPTICS'\n",
+    "    df_knee.name = 'knee'\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print('Original size',data_fram_or.shape )\n",
+    "        print('Natural size',df_Natural.shape)\n",
+    "        print('DBSCAN size',df_DBSCAN.shape)\n",
+    "        print('HDBSCAN size',df_HDBSCAN.shape)\n",
+    "        print('OPTICS size',df_OPTICS.shape)\n",
+    "        print('KNEE size',df_knee.shape)\n",
+    "    \n",
+    "    ######For each dataframe  \n",
+    "    if verbose:\n",
+    "        print('get dataframe Original')\n",
+    "    get_tag_level_df_labels(data_fram_or, levels_cluster)\n",
+    "    ###Natural Cities\n",
+    "    if verbose:\n",
+    "        print('get dataframe Natural cities')\n",
+    "        \n",
+    "    dic_final_levels_Natural_c = get_dics_labels(tree_original, tree_Natural_c, levels_cluster)\n",
+    "    dic_label_final_levels_Natural=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_Natural_c]\n",
+    "    get_tag_level_df_labels(df_Natural, levels_cluster)\n",
+    "    for dic in dic_label_final_levels_Natural[1:]: ## En el nivel 0 no tiene sentido\n",
+    "        tag_ori = dic['level_ori']\n",
+    "        dic_lev = dic['dict']\n",
+    "        retag_originals(data_fram_or,\n",
+    "                        df_Natural,\n",
+    "                        tag_ori,\n",
+    "                        tag_ori,#### Como se hizo con la misma funcion tienen las misma etiqueta \n",
+    "                        dic_lev)\n",
+    "    \n",
+    "    \n",
+    "    ### DBSCAN\n",
+    "    if verbose:\n",
+    "        print('get dataframe DBSCAN')\n",
+    "        \n",
+    "    dic_final_levels_DBSCAN = get_dics_labels(tree_original, tree_DBSCAN, levels_cluster)\n",
+    "    dic_label_final_levels_DBSCAN=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_DBSCAN]\n",
+    "    get_tag_level_df_labels(df_DBSCAN, levels_cluster)\n",
+    "    for dic in dic_label_final_levels_DBSCAN[1:]: ## En el nivel 0 no tiene sentido\n",
+    "        tag_ori = dic['level_ori']\n",
+    "        dic_lev = dic['dict']\n",
+    "        retag_originals(data_fram_or,\n",
+    "                        df_DBSCAN,\n",
+    "                        tag_ori,\n",
+    "                        tag_ori,#### Como se hizo con la misma funcion tienen las misma etiqueta \n",
+    "                        dic_lev)\n",
+    "    \n",
+    "    \n",
+    "    ##HDBSCAN\n",
+    "    if verbose:\n",
+    "        print('get dataframe HDBSCAN')\n",
+    "    dic_final_levels_HDBSCAN = get_dics_labels(tree_original, tree_HDBSCAN, levels_cluster)\n",
+    "    dic_label_final_levels_HDBSCAN=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_HDBSCAN]\n",
+    "    get_tag_level_df_labels(df_HDBSCAN, levels_cluster)\n",
+    "    for dic in dic_label_final_levels_HDBSCAN[1:]: ## En el nivel 0 no tiene sentido\n",
+    "        tag_ori = dic['level_ori']\n",
+    "        dic_lev = dic['dict']\n",
+    "        retag_originals(data_fram_or,\n",
+    "                        df_HDBSCAN,\n",
+    "                        tag_ori,\n",
+    "                        tag_ori,#### Como se hizo con la misma funcion tienen las misma etiqueta \n",
+    "                        dic_lev)\n",
+    "    #### OPTICS\n",
+    "    if verbose:\n",
+    "        print('get dataframe OPTICS')\n",
+    "        \n",
+    "    dic_final_levels_OPTICS = get_dics_labels(tree_original, tree_OPTICS, levels_cluster)\n",
+    "    dic_label_final_levels_OPTICS=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_OPTICS]\n",
+    "    get_tag_level_df_labels(df_OPTICS, levels_cluster)\n",
+    "    for dic in dic_label_final_levels_OPTICS[1:]: ## En el nivel 0 no tiene sentido\n",
+    "        tag_ori = dic['level_ori']\n",
+    "        dic_lev = dic['dict']\n",
+    "        retag_originals(data_fram_or,\n",
+    "                        df_OPTICS,\n",
+    "                        tag_ori,\n",
+    "                        tag_ori,#### Como se hizo con la misma funcion tienen las misma etiqueta \n",
+    "                        dic_lev)\n",
+    "    ##### Knee\n",
+    "    if verbose:\n",
+    "        print('get dataframe Knee')\n",
+    "        \n",
+    "    dic_final_levels_knee = get_dics_labels(tree_original, tree_knee, levels_cluster)\n",
+    "    dic_label_final_levels_knee=[ {'level_ori':dic['level_ori'], 'dict':mod_cid_label(dic['dict']) } for dic in  dic_final_levels_knee]\n",
+    "    get_tag_level_df_labels(df_knee, levels_cluster)\n",
+    "    for dic in dic_label_final_levels_knee[1:]: ## En el nivel 0 no tiene sentido\n",
+    "        tag_ori = dic['level_ori']\n",
+    "        dic_lev = dic['dict']\n",
+    "        retag_originals(data_fram_or,\n",
+    "                        df_knee,\n",
+    "                        tag_ori,\n",
+    "                        tag_ori,#### Como se hizo con la misma funcion tienen las misma etiqueta \n",
+    "                        dic_lev)\n",
+    "    ##############################################Get only signal  noise \n",
+    "    data_fram_or_sig_noise = tree_original.get_tag_noise_signal_tree()\n",
+    "    df_Natural_sig_noise = tree_Natural_c.get_tag_noise_signal_tree()\n",
+    "    df_DBSCAN_sig_noise = tree_DBSCAN.get_tag_noise_signal_tree()\n",
+    "    df_HDBSCAN_sig_noise = tree_HDBSCAN.get_tag_noise_signal_tree()\n",
+    "    df_OPTICS_sig_noise = tree_OPTICS.get_tag_noise_signal_tree()\n",
+    "    df_knee_sig_noise = tree_knee.get_tag_noise_signal_tree()\n",
+    "    \n",
+    "    df_Natural_sig_noise.name='I_Natural_C'\n",
+    "    df_DBSCAN_sig_noise.name= 'I_DBSCAN'\n",
+    "    df_HDBSCAN_sig_noise.name= 'I_HDBSCAN'\n",
+    "    df_OPTICS_sig_noise.name= 'I_OPTICS'\n",
+    "    df_knee_sig_noise.name = 'I_knee'\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    ######Evaluate form metric\n",
+    "    if verbose:\n",
+    "        print('Niveles: ' ,len(tree_original.levels_nodes))\n",
+    "        print('Nodos en el ultimo nivel: ' ,len(tree_original.levels_nodes[-1]))\n",
+    "        #print('tag_all : ' , data_fram_or['Final_tag'].unique())\n",
+    "    levels_r = range(0, levels_cluster)###\n",
+    "    resultado_form_metric = []\n",
+    "    for l in levels_r:\n",
+    "        \n",
+    "        d = { 'Level': l,\n",
+    "            'DBSCAN': similarity_clusterings(tree_original.levels_nodes[l],\n",
+    "                                            tree_DBSCAN.levels_nodes[l]),\n",
+    "             'HDBSCAN': similarity_clusterings(tree_original.levels_nodes[l],\n",
+    "                                             tree_HDBSCAN.levels_nodes[l]),\n",
+    "             'Natural': similarity_clusterings(tree_original.levels_nodes[l],\n",
+    "                                             tree_Natural_c.levels_nodes[l]),\n",
+    "             'OPTICS': similarity_clusterings(tree_original.levels_nodes[l],\n",
+    "                                            tree_OPTICS.levels_nodes[l]),\n",
+    "             'knee': similarity_clusterings(tree_original.levels_nodes[l],\n",
+    "                                          tree_knee.levels_nodes[l])\n",
+    "             }\n",
+    "        resultado_form_metric.append(d)\n",
+    "    \n",
+    "\n",
+    "    return {'Point_dataframes':{'original_retag':data_fram_or,\n",
+    "            'Natural_C':df_Natural ,\n",
+    "            'DBSCAN':df_DBSCAN,\n",
+    "            'HDBSCAN':df_HDBSCAN,\n",
+    "            'OPTICS':df_OPTICS,\n",
+    "            'knee':df_knee\n",
+    "           }, 'metric_form': resultado_form_metric,\n",
+    "            'Noise_signal':{\n",
+    "            'original_retag':data_fram_or_sig_noise,\n",
+    "            'Natural_C':df_Natural_sig_noise ,\n",
+    "            'DBSCAN':df_DBSCAN_sig_noise,\n",
+    "            'HDBSCAN':df_HDBSCAN_sig_noise,\n",
+    "            'OPTICS':df_OPTICS_sig_noise,\n",
+    "            'knee':df_knee_sig_noise\n",
+    "            }\n",
+    "           \n",
+    "           }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5256b222-ed4b-4982-941d-de2769ecdb76",
    "metadata": {},
    "outputs": [],
    "source": []
