--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
     "import os\n",
     "import sys\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from HierarchicalGeoClustering.TreeClusters import *"
+    "from HierarchicalGeoClustering.TreeClusters import *\n"
    ]
   },
   {
@@ -61,25 +63,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hier_geo_clus= TreeClusters(3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3163093/921516667.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mHier_geo_clus\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mTreeClusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mHier_geo_clus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopulate_tree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_per_cluster\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Partition1/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py\u001b[0m in \u001b[0;36mpopulate_tree\u001b[0;34m(self, number_per_cluster, density_init, factor_density, density_init_list, **kwargs)\u001b[0m\n\u001b[1;32m    847\u001b[0m                 \u001b[0mn_childs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    848\u001b[0m                 node_childs = [\n\u001b[0;32m--> 849\u001b[0;31m                     NodeCluster(name = prev.name +'_'+level_str+str(level)+'_'+node_str+str(i),\n\u001b[0m\u001b[1;32m    850\u001b[0m                                 parent=prev) for i in  range(n_childs)\n\u001b[1;32m    851\u001b[0m                             ]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "Hier_geo_clus= TreeClusters(3)\n",
-    "Hier_geo_clus.populate_tree(number_per_cluster=200)"
+    "Hier_geo_clus.populate_tree(number_per_cluster=100, verbose= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root\n",
+      "Root    \n"
+     ]
+    }
+   ],
+   "source": [
+    "Hier_geo_clus.print_structure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Hier_geo_clus.populate_tree(number_per_cluster=200, avoid_intersec= True, verbose= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.019793170068439843 0.009556570546242808 0.9944976191703642 1.0022783878040349\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,1.0213915288965205)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0200455677560807\" opacity=\"0.6\" d=\"M 0.6433276279241661,0.8305360840440589 L 0.5600824281145893,0.7538664173631787 L 0.9292640686698714,0.5160045012151027 L 0.9375830273314045,0.33215614697977425 L 0.8425078809543078,0.06808342010594237 L 0.4582237219242301,0.08623176055070392 L 0.017328251702079966,0.04667799231676262 L 0.13037403105647427,0.36157834650537224 L 0.10779503419184844,0.9747135365797578 L 0.25756573952594086,0.8863906912285259 L 0.6433276279241661,0.8305360840440589 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon at 0x7f983901af50>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hier_geo_clus.root.polygon_cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hier_geo_clus.get_deepth()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hier_geo_clus.root.children"
    ]
   },
   {
