add function to all clustering algorithms work

--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -1499,7 +1499,10 @@
     "    \n",
     "    def get_level(self, level):\n",
     "        \"\"\"\n",
+    "        Get the level\n",
+    "        \n",
     "        :param int level: Level to get nodes\n",
+    "        \n",
     "        :returns List: All the nodes in the level\n",
     "        \"\"\"\n",
     "        return self.levels_nodes[level]\n",
@@ -1943,7 +1946,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.populate_tree\" class=\"doc_header\"><code>TreeClusters.populate_tree</code><a href=\"__main__.py#L75\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.populate_tree\" class=\"doc_header\"><code>TreeClusters.populate_tree</code><a href=\"__main__.py#L78\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.populate_tree</code>(**`number_per_cluster`**=*`None`*, **`density_init`**=*`None`*, **`factor_density`**=*`3`*, **`density_init_list`**=*`None`*, **\\*\\*`kwargs`**)\n",
        "\n",
@@ -1985,7 +1988,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L245\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_deepth\" class=\"doc_header\"><code>TreeClusters.get_deepth</code><a href=\"__main__.py#L248\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.get_deepth</code>()\n",
        "\n",
@@ -2011,7 +2014,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L253\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.size\" class=\"doc_header\"><code>TreeClusters.size</code><a href=\"__main__.py#L256\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.size</code>()\n",
        "\n",
@@ -2044,7 +2047,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.get_points_tree\" class=\"doc_header\"><code>TreeClusters.get_points_tree</code><a href=\"__main__.py#L123\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.get_points_tree\" class=\"doc_header\"><code>TreeClusters.get_points_tree</code><a href=\"__main__.py#L126\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
        "\n",
@@ -2083,7 +2086,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.print_structure\" class=\"doc_header\"><code>TreeClusters.print_structure</code><a href=\"__main__.py#L149\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.print_structure\" class=\"doc_header\"><code>TreeClusters.print_structure</code><a href=\"__main__.py#L152\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.print_structure</code>()\n",
        "\n",
@@ -2109,7 +2112,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.visualize\" class=\"doc_header\"><code>TreeClusters.visualize</code><a href=\"__main__.py#L161\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize\" class=\"doc_header\"><code>TreeClusters.visualize</code><a href=\"__main__.py#L164\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
        "\n",
@@ -2139,7 +2142,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L190\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"TreeClusters.visualize_levels\" class=\"doc_header\"><code>TreeClusters.visualize_levels</code><a href=\"__main__.py#L193\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>TreeClusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
        "\n"
