--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -43,6 +43,8 @@
     "import random\n",
     "import numpy as np\n",
     "import shapely\n",
+    "import pandas as pd\n",
+    "import re\n",
     "from shapely.geometry import LineString\n",
     "from shapely.ops import polygonize, cascaded_union\n",
     "from shapely.geometry import box\n",
@@ -152,6 +154,82 @@
    "outputs": [],
    "source": [
     "#hide\n",
+    "#export\n",
+    "def string_recursive_tag( string_tag, **kwargs):\n",
+    "    \"\"\"\n",
+    "    params: level_str level string\n",
+    "    params: until_level_str level string finish\n",
+    "    params: node_str node string \n",
+    "    params: until_node_str node string finish\n",
+    "    params: noise_str nois string\n",
+    "    params: tree_rec tree to obtain the final cluster id\n",
+    "    \n",
+    "    returns level and cluster id from the tag using a tree \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    level_str = kwargs.get('level_str', '_L_' )\n",
+    "    until_level_str = kwargs.get('until_level_str', '_l_')\n",
+    "    node_str  = kwargs.get('node_str', '_l_')\n",
+    "    until_node_str = kwargs.get('until_node_str', '_c_')\n",
+    "    noise_str= kwargs.get ('noise_str', '_noise')\n",
+    "    tree = kwargs.get( 'tree_rec', None)\n",
+    "    ### Level\n",
+    "    positions_level = [ i.start() for i in re.finditer( level_str, string_tag )]\n",
+    "    until_level_pos = [ i.start() for i in re.finditer( until_level_str, string_tag )]\n",
+    "    levels = [string_tag[ i + len(level_str):j] for i, j in zip(positions_level, until_level_pos) ]\n",
+    "    ### Node\n",
+    "    nodeid_positions = [i.start() for i in re.finditer( node_str, string_tag )]\n",
+    "    until_node_posicion = [i.start() for i in re.finditer( until_node_str,  string_tag) ]\n",
+    "    nodeid = [string_tag[i+len(node_str):j ] for i,j in zip(nodeid_positions, until_node_posicion)]\n",
+    "    \n",
+    "    \n",
+    "    string_find= string_tag[:string_tag.rfind(noise_str)]\n",
+    "    if len(levels)==1:\n",
+    "        level_f= tree.get_level(int(levels[-1]))\n",
+    "        for j in level_f :\n",
+    "            for num, i in enumerate(j.children):\n",
+    "                if i.name == string_find:\n",
+    "                    nodeid.append(str(num))\n",
+    "    elif len(levels)>=2:\n",
+    "        nodeid = nodeid[1:]\n",
+    "        #print(levels[-2])\n",
+    "        #print(nodeid[-1])\n",
+    "        #print(string_tag)\n",
+    "\n",
+    "        for num, i in enumerate(tree.get_node(level_int= int(levels[-2]), node_int=int(nodeid[-1]) ).children) :\n",
+    "            #print(i.name)\n",
+    "            if i.name == string_find:\n",
+    "                nodeid.append(str(num))\n",
+    "    return levels, nodeid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "#export\n",
+    "def retag_from_strings(string_tag) :\n",
+    "    \"\"\"\n",
+    "    Returns only the final node tag\n",
+    "    \"\"\"\n",
+    "    valure = string_tag.rfind('+') \n",
+    "    if  valure!= -1 :\n",
+    "        tag_recal =string_tag [valure+1:]  \n",
+    "    else :\n",
+    "        tag_recal = string_tag\n",
+    "    return tag_recal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
     "#export \n",
     "class cluster(object):\n",
     "    \"\"\"\n",
@@ -169,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1848,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
