--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -1396,7 +1396,7 @@
    "id": "1ac0c4b7-1fee-4144-8325-b6b170ea4366",
    "metadata": {},
    "source": [
-    "## Helper functions\n",
+    "# Helper functions\n",
     "\n",
     "These functions are use by the clustering algorithms and to create the structure, mosly by handly the names for each node "
    ]
