Change name SMF

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -290,7 +290,7 @@
     "\n",
     "for l in range(0, 4):\n",
     "    d = { 'Level': l,                              \n",
-    "        'adaptive DBSCAN':similarity_clusterings(HGC.levels_nodes[l],\n",
+    "        'adaptive DBSCAN':SMF(HGC.levels_nodes[l],\n",
     "                            HGC_adapta_DBSCAN.levels_nodes[l])\n",
     "        }\n",
     "    form_metric.append(d)"
