--- a/src/011_tutorial.ipynb
+++ b/src/011_tutorial.ipynb
@@ -5,8 +5,14 @@
    "id": "185c9419-11a1-47d0-9262-b94c84f30288",
    "metadata": {},
    "source": [
-    "# Tutorial\n",
-    "\n",
+    "# Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b8170d-c12b-4e52-84ab-40ef69d3b3b1",
+   "metadata": {},
+   "source": [
     "In this tutorial a example on how to use the most imporrtant methos of the library are inroduce. "
    ]
   },
